# pcsc-test

./: CMakeLists.txt  main.cpp
